--- a/employeeData.html
+++ b/employeeData.html
@@ -26,12 +26,12 @@
     <div class='row'>
         <div class='col-sm-12'>
             <table class='table'>Employee Database
-                <th scope='col'>Name</th>
-                <th scope='col'>Role</th>
-                <th scope='col'>Start Date</th>
-                <th scope='col'>Has Worked</th>
-                <th scope='col'>Monthly</th>
-                <th scope='col'>Total Billed</th>
+                <th id="name-emName" scope='col'>Name</th>
+                <th id="Role-emRole" scope='col'>Role</th>
+                <th id="startDate-emStart" scope='col'>Start Date</th>
+                <th id="4" scope='col'>Has Worked</th>
+                <th id="Rate-emRate" scope='col'>Monthly</th>
+                <th id="6" scope='col'>Total Billed</th>
 
             </table>
         </div>
@@ -44,29 +44,126 @@
         <div class='col-sm-12'>
             <div class="form-group">
                     <label for="exampleInputEmail1">Employee Name</label>
-                    <input type="text" class="form-control" id="EmName">
+                    <input type="text" class="form-control" id="emName">
               </div>
               <div class="form-group">
                 <label for="exampleInputPassword1">Role</label>
-                <input type="text" class="form-control" id="EmRole">
+                <input type="text" class="form-control" id="emRole">
               </div>
               <div class="form-group">
                 <label for="exampleInputPassword1">Start Date</label>
-                <input type="text" class="form-control" id="EmStart">
+                <input type="text" class="form-control" id="emStart">
               </div>
               <div class="form-group">
                     <label for="exampleInputPassword1">Monthly Rate</label>
-                    <input type="text" class="form-control" id="EmRate">
+                    <input type="text" class="form-control" id="emRate">
 
                 </label>
             </div>
           </div>
 
-                  <button type="submit" class="btn btn-default">Submit</button>
+                  <button id="submit" type="submit" class="btn btn-default">Submit</button>
     </form>
 
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- Script -->
+    
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+<script>
+
+$(document).ready(function(){
+
+ // Initialize Firebase
+ var config = {
+   apiKey: "AIzaSyCmj5LIOx2aUf1SbP-am4Gj4iSW1FkhoOY",
+   authDomain: "employeemngmt2016.firebaseapp.com",
+   databaseURL: "https://employeemngmt2016.firebaseio.com",
+   storageBucket: "employeemngmt2016.appspot.com",
+   messagingSenderId: "1030073874858"
+ };
+ firebase.initializeApp(config);
+
+ var database = firebase.database();
+
+    // Initial Values
+    var name = "";
+    var role = "";
+    var startDate = "";
+    var rate = 0;
+
+
+    // Capture Button Click
+    $("#submit").on("click", function() {
+
+      // Grabbed values from text boxes
+      name = $("#emName").val().trim();
+      role = $("#emRole").val().trim();
+      startDate = $("#emStart").val().trim();
+      rate = $("#emRate").val().trim();
+
+// Code for handling the push
+      database.ref().push({
+        name: name,
+        role: role,
+        startDate: startDate,
+        rate: rate
+      });  
+
+      return false;
+      });
+
+    database.ref().on("value", function(snapshot) {
+
+      // Log everything that's coming out of snapshot
+      console.log(snapshot.val());
+      console.log(snapshot.val().name);
+      console.log(snapshot.val().role);
+      console.log(snapshot.val().startDate);
+      console.log(snapshot.val().rate);
+
+      // Change the HTML to reflect
+      $("#name-emName").html(snapshot.val().name);
+      $("#Role-emRole").html(snapshot.val().role);
+      $("#startDate-emStart").html(snapshot.val().startDate);
+      $("#Rate-emRate").html(snapshot.val().rate);
+
+      // Handle the errors
+    }, function(errorObject) {
+      console.log("Errors handled: " + errorObject.code);
+    });
+  })
+    </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
