--- a/employeeData.html
+++ b/employeeData.html
@@ -116,7 +116,7 @@ $(document).ready(function(){
       return false;
       });
 
-    database.ref().on("value", function(snapshot) {
+    database.ref().on("child_added", function(snapshot) {
 
       // Log everything that's coming out of snapshot
       console.log(snapshot.val());
@@ -124,12 +124,13 @@ $(document).ready(function(){
       console.log(snapshot.val().role);
       console.log(snapshot.val().startDate);
       console.log(snapshot.val().rate);
+      
 
       // Change the HTML to reflect
-      $("#name-emName").html(snapshot.val().name);
-      $("#Role-emRole").html(snapshot.val().role);
-      $("#startDate-emStart").html(snapshot.val().startDate);
-      $("#Rate-emRate").html(snapshot.val().rate);
+      $("#name-emName").append('<tr><td>'+ snapshot.val().name+'<td><tr>');
+      $("#Role-emRole").append('<tr><td>'+ snapshot.val().role+'<td><tr>');
+      $("#startDate-emStart").append('<tr><td>'+snapshot.val().startDate+'<td><tr>');
+      $("#Rate-emRate").append('<tr><td>'+snapshot.val().rate+'<td><tr>');
 
       // Handle the errors
     }, function(errorObject) {
