--- a/employeeData.html
+++ b/employeeData.html
@@ -79,11 +79,11 @@ $(document).ready(function(){
 
  // Initialize Firebase
  var config = {
-   apiKey: "AIzaSyCmj5LIOx2aUf1SbP-am4Gj4iSW1FkhoOY",
-   authDomain: "employeemngmt2016.firebaseapp.com",
-   databaseURL: "https://employeemngmt2016.firebaseio.com",
-   storageBucket: "employeemngmt2016.appspot.com",
-   messagingSenderId: "1030073874858"
+   apiKey: "Use your own Key",
+   authDomain: "use your own key",
+   databaseURL: "Your own generated",
+   storageBucket: "Your own Generated",
+   messagingSenderId: "Your Own Generated"
  };
  firebase.initializeApp(config);
 
